static/css/main.css
/* ... */
.container .main-inner {
  width: 960px;
}
@media (min-width: 768px) and (max-width: 991px) {
  .container .main-inner {
    width: auto;
  }
}
@media (max-width: 767px) {
  .container .main-inner {
    width: auto;
  }
}
.content-wrap {
  float: right;
  box-sizing: border-box;
  padding: 40px;
  width: 700px;
  /* background: #fff; */
  background-color: #242525;
  min-height: 700px;
}
@media (min-width: 768px) and (max-width: 991px) {
  .content-wrap {
    width: 100%;
    padding: 20px;
  }
}
@media (max-width: 767px) {
  .content-wrap {
    width: 100%;
    padding: 20px;
    min-height: auto;
  }
}
.sidebar {
  position: static;
  float: left;
  margin-top: 300px;
  width: 240px;
  background: #fff;
  box-shadow: none;
}
@media (min-width: 768px) and (max-width: 991px) {
  .sidebar {
    display: none;
  }
}
@media (max-width: 767px) {
  .sidebar {
    display: none;
  }
}
.sidebar-toggle {
  display: none;
}
.footer-inner {
  width: 960px;
}
.footer-inner:before {
  content: " ";
  float: left;
  width: 260px;
  min-height: 50px;
}
@media (min-width: 768px) and (max-width: 991px) {
  .footer-inner {
    width: auto;
  }
  .footer-inner:before {
    display: none;
  }
}
@media (max-width: 767px) {
  .footer-inner {
    width: auto;
  }
  .footer-inner:before {
    display: none;
  }
}
.sidebar-position-right .header-inner {
  right: 0;
}
.sidebar-position-right .content-wrap {
  float: left;
}
.sidebar-position-right .sidebar {
  float: right;
}
.sidebar-position-right .footer-inner:before {
  float: right;
}
.site-meta {
  padding: 20px 0;
  color: #fff;
  background: #2b2c2d;
}
@media (min-width: 768px) and (max-width: 991px) {
  .site-meta {
    box-shadow: 0 0 16px rgba(0,0,0,0.5);
  }
}
@media (max-width: 767px) {
  .site-meta {
    box-shadow: 0 0 16px rgba(0,0,0,0.5);
  }
}
.brand {
  display: block;
  padding: 0;
  background: none;
}
.brand:hover {
  color: #fff;
}
.site-subtitle {
  margin: 0;
}
.site-search form {
  display: none;
}
.site-nav {
  border-top: none;
}
@media (min-width: 768px) and (max-width: 991px) {
  .site-nav {
    display: none !important;
  }
}
@media (min-width: 768px) and (max-width: 991px) {
  .site-nav-on {
    display: block !important;
  }
}
.menu .menu-item {
  display: block;
  margin: 0;
  list-style: none;
}
.menu .menu-item a {
  position: relative;
  box-sizing: border-box;
  padding: 5px 20px;
  text-align: left;
  line-height: inherit;
  transition-property: background-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
  transition-delay: 0s;
}
.menu .menu-item a:hover,
.menu-item-active a {
  /* background: #f9f9f9; */
  background-color: #2b2c2d;
  /* border-bottom-color: #fff; */
}
.menu .menu-item br {
  display: none;
}
.menu-item-active a:after {
  content: " ";
  position: absolute;
  top: 50%;
  margin-top: -3px;
  right: 15px;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: #bbb;
}
.btn-bar {
  background-color: #fff;
}
.site-nav-toggle {
  top: 20px;
  left: 20px;
}
@media (min-width: 768px) and (max-width: 991px) {
  .site-nav-toggle {
    display: block;
  }
}
.use-motion .sidebar .motion-element {
  opacity: 1;
}
.sidebar {
  display: none;
  right: auto;
  bottom: auto;
  -webkit-transform: none;
}
.sidebar-inner {
  box-sizing: border-box;
  width: 240px;
  /* color: #555; */
  color: #C8C2B7;
  /* background: #fff; */
  background-color: #242525;
}
.sidebar-inner.affix {
  position: fixed;
  top: 0;
}
.site-overview {
  margin: 0 2px;
  text-align: left;
}
.site-author:before,
.site-author:after {
  content: " ";
  display: table;
}
.site-author:after {
  clear: both;
}
.sidebar a {
  /* color: #555; */
  color: #C8C2B7;
}
.sidebar a:hover {
  color: #E5E0D8;
}
.links-of-author-item a:before {
  display: none;
}
.links-of-author-item a {
  border-bottom: none;
  text-decoration: underline;
}
.feed-link {
  border-top: 1px dotted #464543;
  border-bottom: 1px dotted #464543;
  text-align: center;
}
.feed-link a {
  display: block;
  color: #fc6423;
  border: none;
}
.feed-link a:hover {
  background: none;
  color: #e34603;
}
.feed-link a:hover i {
  color: #e34603;
}
.links-of-author:before,
.links-of-author:after {
  content: " ";
  display: table;
}
.links-of-author:after {
  clear: both;
}
.links-of-author-item {
  float: left;
  padding: 5px 30%;
}
.links-of-author-item a {
  box-sizing: border-box;
  display: inline-block;
  margin-right: 0;
  margin-bottom: 0;
  padding: 0 5px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.links-of-author-item a {
  display: block;
  text-decoration: none;
}
.links-of-author-item a:hover {
  border-radius: 4px;
  background: #2B2C2D;
  transition-property: background-color;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
  transition-delay: 0s;
}
.links-of-author-item .fa {
  margin-right: 2px;
  font-size: 16px;
}
.links-of-author-item .fa-globe {
  font-size: 15px;
}
.links-of-blogroll {
  margin-top: 20px;
  padding: 3px 0 0;
  border-top: 1px dotted #464543;
}
.links-of-blogroll-title {
  margin-top: 0;
}
.links-of-blogroll-item {
  padding: 0;
}
.links-of-blogroll-inline:before,
.links-of-blogroll-inline:after {
  content: " ";
  display: table;
}
.links-of-blogroll-inline:after {
  clear: both;
}
.links-of-blogroll-inline .links-of-blogroll-item {
  float: left;
  margin: 5px 0 0;
  width: 50%;
}
.links-of-blogroll-inline .links-of-blogroll-item a {
  box-sizing: border-box;
  display: inline-block;
  margin-right: 0;
  margin-bottom: 0;
  padding: 0 5px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
@media (max-width: 767px) {
  .post-body {
    text-align: justify;
  }
}
.post-about a {
  border-bottom: 0px;
  color: #999;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
  transition-delay: 0s;
  transition-property: all;
}
.post-about a:hover {
  color: #C8C2B7;
}
* {
  scrollbar-color: #353536 #272928;
}
/* ... */

